chore: Update Gradle wrapper to version 9.7.1 and add mockitoAgent configuration